apps/base/netbootxyz/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbootxyz
  labels:
    pod-security.kubernetes.io/enforce: privileged
