apps/base/netbootxyz/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: netbootxyz
  name: netbootxyz
  labels:
    app: netbootxyz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbootxyz
  template:
    metadata:
      labels:
        app: netbootxyz
    spec:
      containers:
      - name: netbootxyz
        image: ghcr.io/netbootxyz/netbootxyz:0.7.6-nbxyz17
        ports:
        - containerPort: 3000
          name: web-ui
          protocol: TCP
        - containerPort: 80
          name: nginx
          protocol: TCP
        - containerPort: 69
          name: tftp
          protocol: UDP
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: netbootxyz-config
          mountPath: /config
        - name: netbootxyz-assets
          mountPath: /assets
      volumes:
      - name: netbootxyz-config
        persistentVolumeClaim:
          claimName: netbootxyz-config
      - name: netbootxyz-assets
        persistentVolumeClaim:
          claimName: netbootxyz-assets
