apps/base/netbootxyz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: netbootxyz
  name: netbootxyz
  labels:
    app: netbootxyz
    color: blue
spec:
  selector:
    app: netbootxyz
  ports:
  - name: web-ui
    protocol: TCP
    port: 3000
    targetPort: 3000
  - name: nginx-http
    protocol: TCP
    port: 9999
    targetPort: 80
  - name: tftp
    protocol: UDP
    port: 69
    targetPort: 69
  type: LoadBalancer
