apps/base/netbootxyz/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-http-route
  namespace: netbootxyz
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "netboot.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: netbootxyz
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-tls-route
  namespace: netbootxyz
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "netboot.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: netbootxyz
      port: 3000
